[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/Bubble.gd" type="Script" id=1]
[ext_resource path="res://images/bubble-pop-0.png" type="Texture" id=2]
[ext_resource path="res://images/bubble-pop-1.png" type="Texture" id=3]
[ext_resource path="res://images/bubble-move.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 16.4082

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": false,
"name": "pop",
"speed": 2.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[node name="Bubble" type="Area2D"]

transform/scale = Vector2( 2, 2 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = 64

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

frames = SubResource( 2 )
animation = "move"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="PopTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[connection signal="area_enter" from="." to="." method="_on_Bubble_area_enter"]

[connection signal="timeout" from="PopTimer" to="." method="_on_PopTimer_timeout"]


